Opened 11 years ago

Closed 11 years ago

#4325 closed defect (fixed)

Invalid but playable raw h264 stream is not auto-detected

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: h264
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Related to #4324
I will attach a raw h264 stream (that cannot be decoded with the reference decoder) that can be decoded with FFmpeg, but auto-detection fails.

$ /ffmpeg -i h264probing
ffmpeg version N-69945-g2280552 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54. 18.100 / 54. 18.100
  libavcodec     56. 22.100 / 56. 22.100
  libavformat    56. 22.100 / 56. 22.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 11.100 /  5. 11.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[aac @ 0x2fe93a0] Format aac detected only with low score of 1, misdetection possible!

[...]

[aac @ 0x2fe93a0] decoding for stream 0 failed
[aac @ 0x2fe93a0] Estimating duration from bitrate, this may be inaccurate
[aac @ 0x2fe93a0] Could not find codec parameters for stream 0 (Audio: aac (Main), mono, fltp, 89 kb/s): unspecified sample rate
Consider increasing the value for the 'analyzeduration' and 'probesize' options
h264probing: could not find codec parameters
Input #0, aac, from 'h264probing':
  Duration: 00:01:16.81, bitrate: 89 kb/s
    Stream #0:0: Audio: aac (Main), mono, fltp, 89 kb/s
At least one output file must be specified
$ ffmpeg -f h264 -i h264probing
ffmpeg version N-69945-g2280552 Copyright (c) 2000-2015 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      54. 18.100 / 54. 18.100
  libavcodec     56. 22.100 / 56. 22.100
  libavformat    56. 22.100 / 56. 22.100
  libavdevice    56.  4.100 / 56.  4.100
  libavfilter     5. 11.100 /  5. 11.100
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[h264 @ 0x2604e20] non-existing PPS 0 referenced
    Last message repeated 1 times
[h264 @ 0x2604e20] decode_slice_header error
[h264 @ 0x2604e20] no frame!
[h264 @ 0x2604e20] non-existing PPS 0 referenced
    Last message repeated 1 times
[h264 @ 0x2604e20] decode_slice_header error
[h264 @ 0x2604e20] no frame!
Input #0, h264, from 'h264probing':
  Duration: N/A, bitrate: N/A
    Stream #0:0: Video: h264 (Main), yuv420p(tv), 640x360 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 1200k tbn, 50 tbc
At least one output file must be specified

Attachments (1)

h264probing (841.9 KB ) - added by Carl Eugen Hoyos 11 years ago.

Download all attachments as: .zip

Change History (2)

by Carl Eugen Hoyos, 11 years ago

Attachment: h264probing added

comment:1 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.