avformat/h264dec: Fix detection of invalid h264 with 0x100 startcodes

Fies Ticket4325

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>